--- a/src/app/pages/chat/chat.page.html
+++ b/src/app/pages/chat/chat.page.html
@@ -5,7 +5,7 @@
         <ion-menu-button> </ion-menu-button>
       </ion-menu-toggle>
     </ion-buttons>
-    <ion-title>My chat title</ion-title>
+    <ion-title>Business Hustle Chat AI</ion-title>
   </ion-toolbar>
 </ion-header>
 
